fix: login bug try 2

--- a/TakeawayTitans/src/Components/Pages/Admin/AdminLogin.razor
+++ b/TakeawayTitans/src/Components/Pages/Admin/AdminLogin.razor
@@ -30,8 +30,8 @@
             </div>
         </div>
         <div class="row">
-            <Button type="ButtonType.Button" @onclick="ResetForm" class="button btn-reset fs-4">Reset</Button>
-            <Button type="ButtonType.Submit" class="button btn-login fs-4">Login</Button>
+            <Button Type="ButtonType.Button" @onclick="ResetForm" class="button btn-reset fs-4">Reset</Button>
+            <Button Type="ButtonType.Submit" class="button btn-login fs-4">Login</Button>
         </div>
     </EditForm>
 </div>
