--- a/TakeawayTitans/src/Components/Pages/Admin/AdminLogin.razor
+++ b/TakeawayTitans/src/Components/Pages/Admin/AdminLogin.razor
@@ -30,8 +30,14 @@
             </div>
         </div>
         <div class="row">
-            <Button Type="ButtonType.Button" @onclick="ResetForm" class="button btn-reset fs-4">Reset</Button>
-            <Button Type="ButtonType.Submit" class="button btn-login fs-4">Login</Button>
+            <Button Type="ButtonType.Button" @onclick="ResetForm" class="button btn-reset fs-4" Disabled=isLoading>Reset</Button>
+            <Button Type="ButtonType.Submit" class="button btn-login fs-4">
+                Login
+                @if (isLoading)
+                {
+                    <Spinner />
+                }
+            </Button>
         </div>
     </EditForm>
 </div>
@@ -40,18 +46,17 @@
 @code {
     [SupplyParameterFromForm]
     private LoginModel LoginUser {get; set;} = new ();
-    @* [Inject] protected PreloadService PreloadService {get; set;} = default!; *@
 
     private string errorMessage = string.Empty;
-    @* private bool isLoading = false; *@
+    private bool isLoading = false;
     
     private async void HandleLogin()
     {
-        @* isLoading = true; *@
+        isLoading = true;
         errorMessage = string.Empty;
         try 
         {
-            @* PreloadService.Show(); *@
+            
             var customAuthenticationStateProvider = (CustomAuthStateProvider)AuthenticationStateProvider;
 
             if (string.IsNullOrWhiteSpace(LoginUser.Email) || string.IsNullOrWhiteSpace(LoginUser.Password))
@@ -76,8 +81,7 @@
         }
         finally
         {
-            @* isLoading = false; *@
-            @* PreloadService.Hide(); *@
+            isLoading = false;
         }
     }
 
